--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "react-dom": "16.8.6",
     "react-helmet": "6.0.0-beta",
     "react-intl": "2.8.0",
+    "react-multi-carousel": "^2.2.6",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
     "redux": "4.0.1",
