--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "bootstrap": "^4.3.1",
     "chalk": "^2.4.2",
     "compression": "1.7.4",
