--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "react-multi-carousel": "^2.2.6",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
+    "react-router-hash-link": "^1.2.2",
     "redux": "4.0.1",
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
